--- a/Lab02/Zadanie_Lab02.html
+++ b/Lab02/Zadanie_Lab02.html
@@ -90,7 +90,7 @@ function startGL()
     +3.0, +3.0, -1.0,  +3.0, +1.0, -1.0,  +0.0, +0.0, -1.0,//prawa srodek
     +0.0, +0.0, -1.0,  +0.0, +2.0, -1.0,  +3.0, +3.0, -1.0,
   //Bottom
-    -3.0, -2.0, -1.0,  -5.0, -2.0, -1.0,  -3.0, -2.0, +1.0, //lewa gira
+    -3.0, -2.0, -1.0,  -5.0, -2.0, -1.0,  -3.0, -2.0, +1.0, ////lewa gira
     -3.0, -2.0, +1.0,  -5.0, -2.0, +1.0,  -5.0, -2.0, -1.0,	
     +3.0, -2.0, +1.0,  +5.0, -2.0, +1.0,  +5.0, -2.0, -1.0, //prawa gira
     +3.0, -2.0, -1.0,  +5.0, -2.0, -1.0,  +3.0, -2.0, +1.0,
